--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,6 +426,37 @@ body {
   font-size: 15px;
 }
 
+#hero-cleaning {
+  background: url("../img/cleaninghero.jpg") repeat scroll center center/cover;
+  height: 100vh;
+  width: 100%;
+}
+
+#hero-cleaning .hero-content {
+  height: 100vh;
+  text-align: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 550px;
+}
+
+#hero-maintenance {
+  background: url("../img/maintenancehero.jpg") repeat scroll center center/cover;
+  height: 100vh;
+  width: 100%;
+}
+
+#hero-maintenance .hero-content {
+  height: 100vh;
+  text-align: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 550px;
+}
    /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
@@ -1181,11 +1212,11 @@ section {
 }
 
 .features .icon-box h3 a:hover {
-  color: #3498db;
+  color: #327B7C;
 }
 
 .features .icon-box:hover {
-  background: #eef7fc;
+  background: #f6f9fb;
 }
 
 /*--------------------------------------------------------------
