--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -427,7 +427,7 @@ body {
 }
 
 #hero-cleaning {
-  background: url("../img/cleaninghero.jpg") repeat scroll center center/cover;
+  background: url("../img/cleaningherosample.jpg") repeat scroll center center/cover;
   height: 100vh;
   width: 100%;
 }
@@ -456,6 +456,23 @@ body {
   justify-content: center;
   flex-direction: column;
   padding-top: 550px;
+}
+
+/* Media query for screens smaller than 768px */
+@media screen and (max-width: 850px) {
+  /* New hero image styles for smaller screens */
+  #hero {
+    background-image: url('../img/phillelis2Tablet.jpg');
+    /* Other hero styles for smaller screens... */
+  }
+}
+
+@media screen and (max-width: 630px) {
+  /* New hero image styles for smaller screens */
+  #hero {
+    background-image: url('../img/phillelis2Phone.jpg');
+    /* Other hero styles for smaller screens... */
+  }
 }
    /*--------------------------------------------------------------
 # Sections General
