codepractor logo and link added to index footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1366,6 +1366,13 @@ section {
     font-size: 13px;
   }
 
+  #footer .webdesign p {
+    margin: 20px 0 10px 10px;
+  }
+
+  #footer .codepractor img {
+    padding-left: 10px;
+  }
   /*--------------------------------------------------------------
 # About Us Section Cleaning
 --------------------------------------------------------------*/
