--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -826,7 +826,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(50, 123, 124, 0.8), rgba(37, 94, 85, 0.8)), url("../img/countsimage.jpg") fixed center center;
+  background: linear-gradient(rgba(50, 123, 124, 0.8), rgba(37, 94, 85, 0.8));
   background-size: cover;
   padding: 60px 0;
 }
